Source/WebKit2/NetworkProcess/cache/NetworkCacheStorage.cpp
@@ -92,6 +92,7 @@ void Storage::initialize()
             WebCore::getFileSize(filePath, fileSize);
             m_approximateSize += fileSize;
         });
+        m_hasPopulatedContentsFilter = true;
     });
 }
 
@@ -372,7 +373,7 @@ void Storage::retrieve(const Key& key, unsigned priority, RetrieveCompletionHand
         return;
     }
 
-    if (!m_contentsFilter.mayContain(key.shortHash())) {
+    if (!cacheMayContain(key.shortHash())) {
         completionHandler(nullptr);
         return;
     }
@@ -460,7 +461,7 @@ void Storage::dispatchPendingWriteOperations()
         auto& write = *writeOperation;
         m_activeWriteOperations.add(WTF::move(writeOperation));
 
-        if (write.existingEntry && m_contentsFilter.mayContain(write.entry.key.shortHash())) {
+        if (write.existingEntry && cacheMayContain(write.entry.key.shortHash())) {
             dispatchHeaderWriteOperation(write);
             continue;
         }
@@ -515,7 +516,7 @@ void Storage::dispatchHeaderWriteOperation(const WriteOperation& write)
     ASSERT(RunLoop::isMain());
     ASSERT(write.existingEntry);
     ASSERT(m_activeWriteOperations.contains(&write));
-    ASSERT(m_contentsFilter.mayContain(write.entry.key.shortHash()));
+    ASSERT(cacheMayContain(write.entry.key.shortHash()));
 
     // Try to update the header of an existing entry.
     StringCapture cachePathCapture(m_directoryPath);
